# tinyGPU

./: ARCHITECTURE.md  CMakeLists.txt  README.md
include/tinygpu/: disasm.h  kernel_builder.h  kernels.h  simulator.h
src/: disasm.cpp  kernels.cpp  main.cpp  simulator.cpp
tests/: simulator_test.cpp
